<resources>
    <string name="app_name">Realsense Combined</string>
    <string name="diameter">Çap (cm)</string>
    <string name="saveRecord">Kaydı Sakla</string>
    <string name="saveCloud">Nokta Bulutu Kaydet</string>
    <string name="no_point_cloud_saved">En son nokta bulutu kaydı bulunamadı!</string>
    <string name="no_distance">Çap değerini girin</string>
    <string name="save_record_failed">Kayıt başarısız oldu!</string>
    <string name="saving">Kaydediliyor</string>
    <string name="saved">Kaydedildi</string>
    <string name="shouldFillHoles">Boşlukları Doldur</string>
    <string name="continuous_process">Sürekli İşle</string>
    <string name="auto_grab_manuel_info">İşlemek için görüntüye dokunun</string>
    <string name="save">kaydet</string>
    <string name="error_cannot_save_in_continuous">Kaydetmek için sürekli moddan çıkın</string>
    <string name="error_cannot_save_unfrozen">Kaydetmek için görüntüyü işleyin</string>
    <string name="color_image">color image</string>
    <string name="depth_image">depth image</string>
    <string name="waiting_for_connection">Bağlantı bekleniyor</string>
    <string name="central_grab_cut">Merkezi Grab Cut</string>
    <string name="distance_mask">Mesafe Maskesi</string>
    <string name="central_distance_chart">Orta Mesafe Grafiği</string>
    <string name="distance">Mesafe (m)</string>
    <string name="distance_with_placeholder">Mesafe (m): %1$f</string>
    <string name="diameter_with_placeholder">Çap (cm): %1$f</string>
    <string name="two_diameters_with_placeholders">Çap (cm) A1: %1$f A2:%1$f</string>
    <string name="color_image_foreground">Foreground</string>
    <string name="mask_and_cloud">Mesafe Maskesi + Nokta Bulutu</string>
    <string name="failed_to_find_tree_edge">Ağaç kenarı bulunamadı!</string>
    <string name="waiting_for_process">Ölçmek için fotoğrafa tıklayın</string>
    <string name="saved_with_placeholder">%1$s kaydedildi</string>
    <string name="error_cannot_change_settings_frozen">Donmuş durumda ayar değiştirilemez!</string>
    <string name="expected_diameter">Ortalama Cap</string>
    <string name="maximum_diameter_expected">Çap üst limit %1$f cm</string>
    <string name="last_saved_filename">Son kayıt: %1$s</string>
    <string name="nothing_saved_yet">Henüz kayıt yapılmadı</string>
    <string name="toggle">Değiştir</string>
    <string name="save_header_failed">Kayıt Dosyası Başlıkları Kaydedilemedi!</string>
</resources>